fix: pre-commit fixes

--- a/notebooks/demo_plugin_wiring.ipynb
+++ b/notebooks/demo_plugin_wiring.ipynb
@@ -44,11 +44,10 @@
    ],
    "source": [
     "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "\n",
     "from sklearn.datasets import load_breast_cancer\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "from calibrated_explanations import CalibratedExplainer\n",
@@ -82,12 +81,8 @@
     "y = data.target\n",
     "\n",
     "# Split data: train/calibration/test\n",
-    "X_temp, X_test, y_temp, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42\n",
-    ")\n",
-    "X_train, X_cal, y_train, y_cal = train_test_split(\n",
-    "    X_temp, y_temp, test_size=0.4, random_state=42\n",
-    ")\n",
+    "X_temp, X_test, y_temp, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_cal, y_train, y_cal = train_test_split(X_temp, y_temp, test_size=0.4, random_state=42)\n",
     "\n",
     "# Scale features\n",
     "scaler = StandardScaler()\n",
@@ -141,7 +136,7 @@
     "    # (factual_plugin, alternative_plugin, default_interval_plugin also supported)\n",
     ")\n",
     "\n",
-    "print(f\"✓ Explainer created with plot_style='plot_spec.default'\")\n",
+    "print(\"✓ Explainer created with plot_style='plot_spec.default'\")\n",
     "print(f\"  Internal plot style chain: {explainer_a._plot_style_chain}\")"
    ]
   },
@@ -239,7 +234,7 @@
     ")\n",
     "\n",
     "explanations_b = explainer_b.explain_factual(X_test[:5])\n",
-    "print(f\"✓ Created second explainer without explicit plot_style\")\n",
+    "print(\"✓ Created second explainer without explicit plot_style\")\n",
     "print(f\"  Internal plot style chain: {explainer_b._plot_style_chain}\")"
    ]
   },
@@ -274,7 +269,7 @@
     "    index=0,\n",
     "    show=True,\n",
     "    uncertainty=True,\n",
-    "    style_override=\"plot_spec.default\"  # ← Dynamic style selection\n",
+    "    style_override=\"plot_spec.default\",  # ← Dynamic style selection\n",
     ")\n",
     "print(\"✓ Plotted with style_override='plot_spec.default' (Method B)\")"
    ]
@@ -317,7 +312,7 @@
     "    index=0,\n",
     "    show=True,\n",
     "    uncertainty=True,\n",
-    "    style_override=\"legacy\"  # ← Different style, same explanations\n",
+    "    style_override=\"legacy\",  # ← Different style, same explanations\n",
     ")\n",
     "print(\"✓ Plotted same explanations with style_override='legacy' for comparison\")"
    ]
@@ -355,7 +350,7 @@
     "os.environ[\"CE_PLOT_STYLE\"] = \"plot_spec.default\"\n",
     "os.environ[\"CE_PLOT_STYLE_FALLBACKS\"] = \"legacy\"\n",
     "\n",
-    "print(f\"✓ Set environment variables:\")\n",
+    "print(\"✓ Set environment variables:\")\n",
     "print(f\"  CE_PLOT_STYLE = {os.environ.get('CE_PLOT_STYLE')}\")\n",
     "print(f\"  CE_PLOT_STYLE_FALLBACKS = {os.environ.get('CE_PLOT_STYLE_FALLBACKS')}\")"
    ]
@@ -386,7 +381,7 @@
     "    # No explicit plot_style; uses environment variable\n",
     ")\n",
     "\n",
-    "print(f\"✓ Explainer created with environment-based configuration\")\n",
+    "print(\"✓ Explainer created with environment-based configuration\")\n",
     "print(f\"  Internal plot style chain (includes env vars): {explainer_c._plot_style_chain}\")"
    ]
   },
@@ -451,13 +446,8 @@
    ],
    "source": [
     "# Example: Create a custom explanation plugin with declared dependencies\n",
-    "from calibrated_explanations.plugins.explanations import (\n",
-    "    ExplanationPlugin,\n",
-    "    ExplanationContext,\n",
-    "    ExplanationRequest,\n",
-    "    ExplanationBatch,\n",
-    ")\n",
     "from calibrated_explanations.plugins.builtins import LegacyFactualExplanationPlugin\n",
+    "\n",
     "\n",
     "class HelloFactualPlugin(LegacyFactualExplanationPlugin):\n",
     "    \"\"\"Example explanation plugin with explicit plot and interval dependencies.\"\"\"\n",
@@ -471,6 +461,7 @@
     "        \"dependencies\": (\"plot_spec.default\", \"core.interval.legacy\"),\n",
     "        \"trusted\": False,\n",
     "    }\n",
+    "\n",
     "\n",
     "print(\"✓ Created custom explanation plugin with declared dependencies\")\n",
     "print(f\"  plot_dependency: {HelloFactualPlugin.plugin_meta.get('plot_dependency')}\")\n",
@@ -534,9 +525,9 @@
     "    # plot_style not specified; will be seeded from plugin metadata\n",
     ")\n",
     "\n",
-    "print(f\"✓ Explainer created with plugin declaring dependencies\")\n",
+    "print(\"✓ Explainer created with plugin declaring dependencies\")\n",
     "print(f\"  Plot style chain (includes plugin dependencies): {explainer_e._plot_style_chain}\")\n",
-    "print(f\"  Note: plot_spec.default is first (from plugin's plot_dependency)\")"
+    "print(\"  Note: plot_spec.default is first (from plugin's plot_dependency)\")"
    ]
   },
   {
@@ -623,11 +614,11 @@
     "    # but the explicit parameter wins\n",
     ")\n",
     "\n",
-    "print(f\"Configuration priority demonstration:\")\n",
-    "print(f\"  Environment: CE_PLOT_STYLE='plot_spec.default'\")\n",
-    "print(f\"  Explicit parameter: plot_style='legacy'\")\n",
+    "print(\"Configuration priority demonstration:\")\n",
+    "print(\"  Environment: CE_PLOT_STYLE='plot_spec.default'\")\n",
+    "print(\"  Explicit parameter: plot_style='legacy'\")\n",
     "print(f\"  Result: {explainer_priority._plot_style_chain[0]}\")\n",
-    "print(f\"  → Explicit parameter takes precedence!\")"
+    "print(\"  → Explicit parameter takes precedence!\")"
    ]
   },
   {
@@ -658,8 +649,8 @@
     "        show=True,\n",
     "        style_override=\"nonexistent.plugin\",  # Will fail, then try fallbacks\n",
     "    )\n",
-    "except Exception as e:\n",
-    "    print(f\"Note: nonexistent.plugin will fall back to next in chain\")"
+    "except Exception:\n",
+    "    print(\"Note: nonexistent.plugin will fall back to next in chain\")"
    ]
   },
   {
