--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -292,7 +292,9 @@
    "outputs": [],
    "source": [
     "alternative_explanations = ce.explore_alternatives(X_test)\n",
-    "alternative_explanation = alternative_explanations[0] # or alternative_explanations.get_explanation(0) \n",
+    "alternative_explanation = alternative_explanations[\n",
+    "    0\n",
+    "]  # or alternative_explanations.get_explanation(0)\n",
     "alternative = alternative_explanation._get_rules()"
    ]
   },
@@ -588,22 +590,26 @@
     }
    ],
    "source": [
+    "import hashlib\n",
     "import json\n",
     "import time\n",
-    "import hashlib\n",
-    "from typing import Optional, Dict, Any\n",
+    "\n",
     "import numpy as np\n",
     "\n",
-    "def anonymize_value(val, salt='salt'):\n",
+    "\n",
+    "def anonymize_value(val, salt=\"salt\"):\n",
     "    \"\"\"Simple deterministic hash for redaction before export.\"\"\"\n",
     "    if isinstance(val, str):\n",
     "        return hashlib.sha256((str(val) + salt).encode()).hexdigest()[:16]\n",
     "    return val\n",
     "\n",
-    "def explanation_to_payload(exp, instance_id=None, run_id=None, model_version=None, redact_values=True):\n",
+    "\n",
+    "def explanation_to_payload(\n",
+    "    exp, instance_id=None, run_id=None, model_version=None, redact_values=True\n",
+    "):\n",
     "    \"\"\"Flattens _get_rules() + prediction into a structured JSON payload.\"\"\"\n",
     "    rules_data = exp._get_rules()\n",
-    "    \n",
+    "\n",
     "    # Helper to convert numpy types to Python types\n",
     "    def to_python(obj):\n",
     "        if isinstance(obj, np.ndarray):\n",
@@ -614,30 +620,32 @@
     "            return [to_python(item) for item in obj]\n",
     "        else:\n",
     "            return obj\n",
-    "    \n",
+    "\n",
     "    payload = {\n",
     "        \"meta\": {\n",
     "            \"timestamp\": time.time(),\n",
     "            \"run_id\": run_id,\n",
     "            \"model_version\": model_version,\n",
-    "            \"explainer_version\": \"calibrated_explanations_v1\"\n",
+    "            \"explainer_version\": \"calibrated_explanations_v1\",\n",
     "        },\n",
     "        \"prediction\": {\n",
     "            \"base_predict\": to_python(rules_data.get(\"base_predict\", [None])[0]),\n",
     "            \"base_predict_low\": to_python(rules_data.get(\"base_predict_low\", [None])[0]),\n",
     "            \"base_predict_high\": to_python(rules_data.get(\"base_predict_high\", [None])[0]),\n",
-    "            \"classes\": to_python(getattr(exp, 'classes_', None))\n",
+    "            \"classes\": to_python(getattr(exp, \"classes_\", None)),\n",
     "        },\n",
     "        \"rules\": [\n",
     "            {\n",
     "                \"rule_text\": rule.replace(\"\\n\", \" \"),\n",
-    "                \"feature_value\": anonymize_value(to_python(feature_val), salt='salt') if redact_values else to_python(feature_val),\n",
+    "                \"feature_value\": anonymize_value(to_python(feature_val), salt=\"salt\")\n",
+    "                if redact_values\n",
+    "                else to_python(feature_val),\n",
     "                \"weight\": to_python(weight),\n",
     "                \"weight_low\": to_python(weight_low),\n",
     "                \"weight_high\": to_python(weight_high),\n",
     "                \"predict\": to_python(predict),\n",
     "                \"predict_low\": to_python(predict_low),\n",
-    "                \"predict_high\": to_python(predict_high)\n",
+    "                \"predict_high\": to_python(predict_high),\n",
     "            }\n",
     "            for rule, feature_val, weight, weight_low, weight_high, predict, predict_low, predict_high in zip(\n",
     "                rules_data[\"rule\"],\n",
@@ -647,19 +655,33 @@
     "                rules_data.get(\"weight_high\", [None] * len(rules_data[\"rule\"])),\n",
     "                rules_data[\"predict\"],\n",
     "                rules_data.get(\"predict_low\", [None] * len(rules_data[\"rule\"])),\n",
-    "                rules_data.get(\"predict_high\", [None] * len(rules_data[\"rule\"]))\n",
+    "                rules_data.get(\"predict_high\", [None] * len(rules_data[\"rule\"])),\n",
     "            )\n",
     "        ],\n",
     "        \"telemetry\": {\n",
-    "            \"interval_width\": to_python((rules_data.get(\"base_predict_high\", [0])[0] - rules_data.get(\"base_predict_low\", [0])[0])) if rules_data.get(\"base_predict_high\") and rules_data.get(\"base_predict_low\") else None,\n",
-    "            \"mean_abs_weight\": to_python(sum(abs(w) for w in rules_data[\"weight\"]) / len(rules_data[\"weight\"])) if rules_data[\"weight\"] else None,\n",
-    "            \"num_rules\": len(rules_data[\"rule\"])\n",
-    "        }\n",
+    "            \"interval_width\": to_python(\n",
+    "                (\n",
+    "                    rules_data.get(\"base_predict_high\", [0])[0]\n",
+    "                    - rules_data.get(\"base_predict_low\", [0])[0]\n",
+    "                )\n",
+    "            )\n",
+    "            if rules_data.get(\"base_predict_high\") and rules_data.get(\"base_predict_low\")\n",
+    "            else None,\n",
+    "            \"mean_abs_weight\": to_python(\n",
+    "                sum(abs(w) for w in rules_data[\"weight\"]) / len(rules_data[\"weight\"])\n",
+    "            )\n",
+    "            if rules_data[\"weight\"]\n",
+    "            else None,\n",
+    "            \"num_rules\": len(rules_data[\"rule\"]),\n",
+    "        },\n",
     "    }\n",
     "    return payload\n",
     "\n",
+    "\n",
     "# Example usage\n",
-    "payload = explanation_to_payload(factual_explanation, instance_id=\"instance_123\", run_id=\"run_456\", model_version=\"v1.0\")\n",
+    "payload = explanation_to_payload(\n",
+    "    factual_explanation, instance_id=\"instance_123\", run_id=\"run_456\", model_version=\"v1.0\"\n",
+    ")\n",
     "print(json.dumps(payload, indent=2)[:500] + \"...\")  # Print head for brevity"
    ]
   },
@@ -765,10 +787,11 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def triangular_payload(exp, include_distributions=False):\n",
     "    \"\"\"Returns a nested structure with base predict + per-feature weight/predict/weight-bands.\"\"\"\n",
     "    rules_data = exp._get_rules()\n",
-    "    \n",
+    "\n",
     "    # Helper to convert numpy types to Python types\n",
     "    def to_python(obj):\n",
     "        if isinstance(obj, np.ndarray):\n",
@@ -779,7 +802,7 @@
     "            return [to_python(item) for item in obj]\n",
     "        else:\n",
     "            return obj\n",
-    "    \n",
+    "\n",
     "    tri_payload = {\n",
     "        \"base_predict\": to_python(rules_data.get(\"base_predict\", [None])[0]),\n",
     "        \"base_predict_low\": to_python(rules_data.get(\"base_predict_low\", [None])[0]),\n",
@@ -793,7 +816,7 @@
     "                \"weight_high\": to_python(weight_high),\n",
     "                \"predict\": to_python(predict),\n",
     "                \"predict_low\": to_python(predict_low),\n",
-    "                \"predict_high\": to_python(predict_high)\n",
+    "                \"predict_high\": to_python(predict_high),\n",
     "            }\n",
     "            for rule, feature_val, weight, weight_low, weight_high, predict, predict_low, predict_high in zip(\n",
     "                rules_data[\"rule\"],\n",
@@ -803,14 +826,15 @@
     "                rules_data.get(\"weight_high\", [None] * len(rules_data[\"rule\"])),\n",
     "                rules_data[\"predict\"],\n",
     "                rules_data.get(\"predict_low\", [None] * len(rules_data[\"rule\"])),\n",
-    "                rules_data.get(\"predict_high\", [None] * len(rules_data[\"rule\"]))\n",
+    "                rules_data.get(\"predict_high\", [None] * len(rules_data[\"rule\"])),\n",
     "            )\n",
-    "        ]\n",
+    "        ],\n",
     "    }\n",
     "    if include_distributions:\n",
     "        # Add distribution info if available\n",
     "        pass  # Placeholder for future distribution data\n",
     "    return tri_payload\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "tri_example = triangular_payload(factual_explanation)\n",
@@ -838,18 +862,22 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def rules_to_dataframe(exp):\n",
     "    \"\"\"Convert rules to pandas DataFrame for export.\"\"\"\n",
     "    rules_data = exp._get_rules()\n",
-    "    \n",
-    "    df = pd.DataFrame({\n",
-    "        \"rule\": [rule.replace(\"\\n\", \" \") for rule in rules_data[\"rule\"]],\n",
-    "        \"feature_value\": rules_data.get(\"feature_value\", [\"\"] * len(rules_data[\"rule\"])),\n",
-    "        \"weight\": rules_data[\"weight\"],\n",
-    "        \"weight_low\": rules_data.get(\"weight_low\", [None] * len(rules_data[\"rule\"])),\n",
-    "        \"weight_high\": rules_data.get(\"weight_high\", [None] * len(rules_data[\"rule\"])),\n",
-    "    })\n",
+    "\n",
+    "    df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"rule\": [rule.replace(\"\\n\", \" \") for rule in rules_data[\"rule\"]],\n",
+    "            \"feature_value\": rules_data.get(\"feature_value\", [\"\"] * len(rules_data[\"rule\"])),\n",
+    "            \"weight\": rules_data[\"weight\"],\n",
+    "            \"weight_low\": rules_data.get(\"weight_low\", [None] * len(rules_data[\"rule\"])),\n",
+    "            \"weight_high\": rules_data.get(\"weight_high\", [None] * len(rules_data[\"rule\"])),\n",
+    "        }\n",
+    "    )\n",
     "    return df\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "df_rules = rules_to_dataframe(factual_explanation)\n",
@@ -879,14 +907,17 @@
     "    \"\"\"Convert alternative explanation rules to pandas DataFrame for export.\"\"\"\n",
     "    rules_data = exp._get_rules()\n",
     "\n",
-    "    df = pd.DataFrame({\n",
-    "        \"rule\": [rule.replace(\"\\n\", \" \") for rule in rules_data[\"rule\"]],\n",
-    "        \"feature_value\": rules_data.get(\"feature_value\", [\"\"] * len(rules_data[\"rule\"])),\n",
-    "        \"predict\": rules_data.get(\"predict\", [None] * len(rules_data[\"rule\"])),\n",
-    "        \"predict_low\": rules_data.get(\"predict_low\", [None] * len(rules_data[\"rule\"])),\n",
-    "        \"predict_high\": rules_data.get(\"predict_high\", [None] * len(rules_data[\"rule\"])),\n",
-    "    })\n",
+    "    df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"rule\": [rule.replace(\"\\n\", \" \") for rule in rules_data[\"rule\"]],\n",
+    "            \"feature_value\": rules_data.get(\"feature_value\", [\"\"] * len(rules_data[\"rule\"])),\n",
+    "            \"predict\": rules_data.get(\"predict\", [None] * len(rules_data[\"rule\"])),\n",
+    "            \"predict_low\": rules_data.get(\"predict_low\", [None] * len(rules_data[\"rule\"])),\n",
+    "            \"predict_high\": rules_data.get(\"predict_high\", [None] * len(rules_data[\"rule\"])),\n",
+    "        }\n",
+    "    )\n",
     "    return df\n",
+    "\n",
     "\n",
     "# Example usage for the already-created alternative_explanation\n",
     "df_alternative_rules = alternative_rules_to_dataframe(alternative_explanation)\n",
