refactor: standardize terminology from "thresholded regression" to "probabilistic regression" with backward compatibility measures

--- a/docs/migration/v0.8-to-v0.9-terminology.md
+++ b/docs/migration/v0.8-to-v0.9-terminology.md
@@ -2,7 +2,8 @@
 
 **Release:** v0.9.0+  
 **Date:** November 2025  
-**Impact:** Documentation and code naming (no API or behavior changes)
+**Impact:** Documentation and code naming (no breaking changes)  
+**Audience:** All users, contributors, and plugin developers
 
 ---
 
@@ -16,6 +17,15 @@ Terminology was standardized to clarify the relationship between "probabilistic 
 **"Thresholded regression" remains in technical architecture documents** (ADRs, design notes) to describe the implementation mechanism.
 
 Both terms refer to **the same feature**: regression with calibrated probability predictions.
+
+### Backward Compatibility Guarantee
+
+✅ **Zero breaking changes to public API**
+
+- `is_thresholded()` method remains unchanged
+- `threshold` and `y_threshold` parameters unchanged
+- All existing code continues to work without modification
+- Internal method `_is_thresholded()` has backward-compatible alias (to be removed in v0.10.0)
 
 ---
 
