Standardize terminology: "Probabilistic Regression" vs "Thresholded Regression"
- Added comprehensive migration guide for terminology standardization from "thresholded regression" to "probabilistic regression" in user-facing documentation.
- Created in-depth terminology analysis document detailing the equivalence of both terms and their usage contexts.
- Updated internal method `_is_thresholded()` to `_is_probabilistic_regression()` with backward-compatible alias for future deprecation.
- Refined docstrings and comments across multiple files to consistently use "probabilistic regression" while clarifying the threshold mechanism.
- Enhanced test docstrings to clarify the relationship between "probabilistic regression" and "thresholded regression."
- Updated CHANGELOG to reflect terminology standardization and migration guide creation.

--- a/docs/migration/v0.9-to-v0.10-terminology.md
+++ b/docs/migration/v0.9-to-v0.10-terminology.md
@@ -1,8 +1,8 @@
-# v0.8 → v0.9: Terminology Standardization
+# v0.9 → v0.10: Terminology Standardization
 
-**Release:** v0.9.0+  
-**Date:** November 2025  
-**Impact:** Documentation and code naming (no breaking changes)  
+**Release:** v0.9.1+
+**Date:** November 2025
+**Impact:** Documentation and code naming (no breaking changes)
 **Audience:** All users, contributors, and plugin developers
 
 ---
@@ -13,7 +13,7 @@ Terminology was standardized to clarify the relationship between "probabilistic 
 
 ### Key Change
 
-**"Probabilistic regression" is now the canonical term** across all user-facing documentation and code.  
+**"Probabilistic regression" is now the canonical term** across all user-facing documentation and code.
 **"Thresholded regression" remains in technical architecture documents** (ADRs, design notes) to describe the implementation mechanism.
 
 Both terms refer to **the same feature**: regression with calibrated probability predictions.
@@ -102,7 +102,7 @@ Follow ADR-021 terminology guidance:
 
 - Use **"probabilistic regression"** in public-facing docstrings and error messages
 - Use **"thresholded regression"** in implementation comments where you discuss the threshold mechanism or CPS/Venn-Abers details
-- See [ADR-021 Terminology section](../../improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md#terminology-probabilistic-regression-vs-thresholded-regression) for details
+- See [ADR-021 Terminology section](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md#terminology-probabilistic-regression-vs-thresholded-regression) for details
 
 ### If You Maintain Tests
 
@@ -116,9 +116,9 @@ def test_thresholded_regression():
 # New:
 def test_probabilistic_regression():
     """Test probabilistic regression behavior.
-    
-    Probabilistic regression (also called thresholded regression in the architecture 
-    layer) applies a threshold to convert regression predictions into calibrated 
+
+    Probabilistic regression (also called thresholded regression in the architecture
+    layer) applies a threshold to convert regression predictions into calibrated
     probabilities P(y <= threshold).
     """
 ```
@@ -127,7 +127,7 @@ def test_probabilistic_regression():
 
 ## Timeline for Full Deprecation
 
-- **v0.9.0:** Terminology standardized; `_is_thresholded()` renamed
+- **v0.9.1:** Terminology standardized; `_is_thresholded()` renamed
 - **v0.10.0:** Full cleanup; internal naming conventions finalized
 - **v1.0.0:** Public API stabilized; `is_thresholded()` remains for backward compatibility
 
@@ -146,8 +146,8 @@ def test_probabilistic_regression():
 ## Further Reading
 
 - [Concept Guide: Probabilistic Regression](../foundations/concepts/probabilistic_regression.md)
-- [ADR-021: Calibrated Interval Semantics](../../improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md)
-- [Terminology Analysis (full report)](../../TERMINOLOGY_ANALYSIS_THRESHOLDED_VS_PROBABILISTIC_REGRESSION.md)
+- [ADR-021: Calibrated Interval Semantics](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md)
+- [Terminology Analysis (full report)](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/TERMINOLOGY_ANALYSIS_THRESHOLDED_VS_PROBABILISTIC_REGRESSION.md)
 
 ---
 
