refactor: update terminology and improve documentation for probabilistic regression

--- a/docs/migration/v0.9-to-v0.10-terminology.md
+++ b/docs/migration/v0.9-to-v0.10-terminology.md
@@ -153,4 +153,4 @@ def test_probabilistic_regression():
 
 ## Questions?
 
-See the [FAQ section in the concept guide](../foundations/concepts/probabilistic_regression.md#faq) or file an issue on GitHub.
+See the [concept guide](../foundations/concepts/probabilistic_regression.md) or file an issue on GitHub.
