refactor: update links in terminology documentation for clarity

--- a/docs/migration/v0.9-to-v0.10-terminology.md
+++ b/docs/migration/v0.9-to-v0.10-terminology.md
@@ -102,7 +102,7 @@ Follow ADR-021 terminology guidance:
 
 - Use **"probabilistic regression"** in public-facing docstrings and error messages
 - Use **"thresholded regression"** in implementation comments where you discuss the threshold mechanism or CPS/Venn-Abers details
-- See [ADR-021 Terminology section](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md#terminology-probabilistic-regression-vs-thresholded-regression) for details
+- See the [ADR-021 Terminology section](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md) for details
 
 ### If You Maintain Tests
 
@@ -147,7 +147,6 @@ def test_probabilistic_regression():
 
 - [Concept Guide: Probabilistic Regression](../foundations/concepts/probabilistic_regression.md)
 - [ADR-021: Calibrated Interval Semantics](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/adrs/ADR-021-calibrated-interval-semantics.md)
-- [Terminology Analysis (full report)](https://github.com/Moffran/calibrated_explanations/blob/main/improvement_docs/TERMINOLOGY_ANALYSIS_THRESHOLDED_VS_PROBABILISTIC_REGRESSION.md)
 
 ---
 
