Added narrative explanations and supporting assets
- added NarrativeGenerator plus CalibratedExplainer/WrapCalibratedExplainer.explain_with_narrative (and _infer_problem_type) to turn factual/alternative output into beginner/intermediate/advanced prose
- bundle the default exp.yaml template and notebooks/test_calibrated_explanations.py harness that exports Excel narratives, and declare the PyYAML/OpenPyXL deps they require
- tweak Venn-Abers normalization and supporting perf/parallel helpers so the new narrative experience is backed by stable probabilities

--- a/notebooks/demo_under_the_hood.ipynb
+++ b/notebooks/demo_under_the_hood.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calibrated_explanations v0.9.0\n"
+      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: crepes in /opt/homebrew/lib/python3.9/site-packages (0.8.0)\n",
+      "Requirement already satisfied: numpy in /Users/poorna/Library/Python/3.9/lib/python/site-packages (from crepes) (1.26.4)\n",
+      "Requirement already satisfied: pandas in /opt/homebrew/lib/python3.9/site-packages (from crepes) (2.2.2)\n",
+      "Requirement already satisfied: scipy in /opt/homebrew/lib/python3.9/site-packages (from crepes) (1.13.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/poorna/Library/Python/3.9/lib/python/site-packages (from pandas->crepes) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.9/site-packages (from pandas->crepes) (2021.3)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/homebrew/lib/python3.9/site-packages (from pandas->crepes) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/poorna/Library/Python/3.9/lib/python/site-packages (from python-dateutil>=2.8.2->pandas->crepes) (1.17.0)\n",
+      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/opt/homebrew/opt/python@3.9/bin/python3.9 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install \"crepes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys; \n",
+    "sys.path.insert(0, \"/Users/poorna/Downloads/CE-updated/calibrated_explanations/src\"); \n",
+    "#sys.path.insert(0, \"/Users/poorna/Downloads/calibrated_explanations-main/src\"); sys.path.insert(0, \"/Users/poorna/Downloads/calibrated_explanations-main/src\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'crepes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mensemble\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomForestClassifier\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcalibrated_explanations\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CalibratedExplainer, __version__\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcalibrated_explanations \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m__version__\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Downloads/CE-updated/calibrated_explanations/src/calibrated_explanations/__init__.py:74\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m value\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCalibratedExplainer\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 74\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcalibrated_explainer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CalibratedExplainer\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28mglobals\u001b[39m()[name] \u001b[38;5;241m=\u001b[39m CalibratedExplainer\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m CalibratedExplainer\n",
+      "File \u001b[0;32m~/Downloads/CE-updated/calibrated_explanations/src/calibrated_explanations/core/__init__.py:14\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m warn \u001b[38;5;28;01mas\u001b[39;00m _warn\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcalibrated_explainer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CalibratedExplainer  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwrap_explainer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WrapCalibratedExplainer  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Avoid emitting the deprecation warning during test runs (pytest imports\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# submodules which would otherwise cause strict test runs to fail). Emit the\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# normal DeprecationWarning for regular users.\u001b[39;00m\n",
+      "File \u001b[0;32m~/Downloads/CE-updated/calibrated_explanations/src/calibrated_explanations/core/calibrated_explainer.py:37\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover - tomllib unavailable\u001b[39;00m\n\u001b[1;32m     36\u001b[0m         _tomllib \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# type: ignore[assignment]\u001b[39;00m\n\u001b[0;32m---> 37\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcrepes\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ConformalClassifier\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcrepes\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mextras\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hinge\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m confusion_matrix\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'crepes'"
      ]
     }
    ],
@@ -916,7 +963,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "calibrated_explanations_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -930,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
