--- a/notebooks/demo_plugin_wiring.ipynb
+++ b/notebooks/demo_plugin_wiring.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "6434502e",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "✓ Libraries imported successfully\n",
-      "✓ Calibrated Explanations version: v0.9.0\n"
+      "✓ Calibrated Explanations version: v0.9.1\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
      "output_type": "stream",
      "text": [
       "✓ Created second explainer without explicit plot_style\n",
-      "  Internal plot style chain: ('plot_spec.default', 'legacy')\n"
+      "  Internal plot style chain: ('legacy',)\n"
      ]
     }
    ],
@@ -497,7 +497,7 @@
      "output_type": "stream",
      "text": [
       "✓ Explainer created with plugin declaring dependencies\n",
-      "  Plot style chain (includes plugin dependencies): ('plot_spec.default', 'legacy')\n",
+      "  Plot style chain (includes plugin dependencies): ('legacy',)\n",
       "  Note: plot_spec.default is first (from plugin's plot_dependency)\n"
      ]
     }
@@ -750,7 +750,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\legacy\\plotting.py:204: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\legacy\\plotting.py:204: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
