--- a/notebooks/quickstart_tiny.ipynb
+++ b/notebooks/quickstart_tiny.ipynb
@@ -26,14 +26,23 @@
    "execution_count": 1,
    "id": "d9b733bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calibrated Explanations version: v0.9.1\n"
+     ]
+    }
+   ],
    "source": [
     "# Import required libraries\n",
     "import numpy as np\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from calibrated_explanations import CalibratedExplainer"
+    "from calibrated_explanations import CalibratedExplainer, __version__\n",
+    "print(\"Calibrated Explanations version:\", __version__)"
    ]
   },
   {
@@ -518,7 +527,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loftuw\\CUDATemp\\ipykernel_24812\\1369054580.py:3: DeprecationWarning: This method is deprecated and may be removed in future versions. Use indexing instead.\n",
+      "C:\\Users\\loftuw\\CUDATemp\\ipykernel_87900\\1369054580.py:3: DeprecationWarning: This method is deprecated and may be removed in future versions. Use indexing instead.\n",
       "  explanation = explanations.get_explanation(0)\n"
      ]
     }
