feat: Release task 7 - Terminology Standardization (ADR-021)

--- a/docs/migration/v0.9-to-v0.10-terminology.md
+++ b/docs/migration/v0.9-to-v0.10-terminology.md
@@ -25,7 +25,7 @@ Both terms refer to **the same feature**: regression with calibrated probability
 - `is_thresholded()` method remains unchanged
 - `threshold` and `y_threshold` parameters unchanged
 - All existing code continues to work without modification
-- Internal method `_is_thresholded()` has backward-compatible alias (to be removed in v0.10.0)
+- Internal method `_is_thresholded()` removed in v0.10.0 (use `_is_probabilistic_regression()`)
 
 ---
 
