--- a/notebooks/demo_plugin_wiring.ipynb
+++ b/notebooks/demo_plugin_wiring.ipynb
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "text": [
       "✓ Libraries imported successfully\n",
-      "✓ Calibrated Explanations version: v0.9.1\n"
+      "✓ Calibrated Explanations version: v0.10.0\n"
      ]
     }
    ],
@@ -116,6 +116,14 @@
    "id": "ebb9fba0",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\loftuw\\AppData\\Local\\anaconda3\\envs\\calibrated_explanations_env\\lib\\importlib\\__init__.py:126: UserWarning: Cache backend fallback: using minimal in-package LRU/TTL implementation due to missing 'cachetools'\n",
+      "  return _bootstrap._gcd_import(name[level:], package, level)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -750,7 +758,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\legacy\\plotting.py:204: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\legacy\\plotting.py:219: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
