--- a/notebooks/quickstart_tiny.ipynb
+++ b/notebooks/quickstart_tiny.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calibrated Explanations version: v0.9.1\n"
+      "Calibrated Explanations version: v0.10.0\n"
      ]
     }
    ],
@@ -504,7 +504,16 @@
    "execution_count": 4,
    "id": "9455f5db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\loftuw\\AppData\\Local\\anaconda3\\envs\\calibrated_explanations_env\\lib\\importlib\\__init__.py:126: UserWarning: Cache backend fallback: using minimal in-package LRU/TTL implementation due to missing 'cachetools'\n",
+      "  return _bootstrap._gcd_import(name[level:], package, level)\n"
+     ]
+    }
+   ],
    "source": [
     "# Calibrate explainer\n",
     "ce = CalibratedExplainer(model, X_cal, y_cal)"
@@ -527,7 +536,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loftuw\\CUDATemp\\ipykernel_87900\\1369054580.py:3: DeprecationWarning: This method is deprecated and may be removed in future versions. Use indexing instead.\n",
+      "C:\\Users\\loftuw\\CUDATemp\\ipykernel_52892\\1369054580.py:3: DeprecationWarning: This method is deprecated and may be removed in future versions. Use indexing instead.\n",
       "  explanation = explanations.get_explanation(0)\n"
      ]
     }
