--- a/docs/improvement/v0.10.1_plan.md
+++ b/docs/improvement/v0.10.1_plan.md
@@ -65,13 +65,15 @@ existing exports/imports.
    - Refresh fixtures/tests in `tests/` that reference the old flat schema,
      including round-trip tests (`tests/test_serialization_and_quick.py`).
 
-**Open questions**
-- Should the envelope become the default for `CalibratedExplanations.to_json` in v0.10.1,
-  or do we keep legacy-by-default and introduce a new explicit `to_envelope` API?
-- What exact fields must be included in `generator.parameters_hash` to ensure stable,
-  reproducible hashes without leaking sensitive data?
-- How should we version the envelope directory (`schemas/v1/`) relative to the existing
-  `schemas/explanation_schema_v1.json` to avoid breaking imports or tests?
+**Decisions**
+- Make the ADR-005 envelope the default for `CalibratedExplanations.to_json` in v0.10.1;
+  keep legacy export only as an explicit opt-in compatibility path.
+- Compute `generator.parameters_hash` from deterministic, non-sensitive configuration
+  inputs plus core library versions to improve reproducibility without leaking data.
+- Version schemas under `schemas/v1/` and treat the legacy flat schema as deprecated
+  (remove it from the primary schema path for v0.10.1).
+- Make the envelope carry an optional audit/provenance block (correlation_id, policy_version, environment) so exports are self-describing. Optional block with fixed keys; default empty.
+- 
 
 **Verification checklist**
 - New envelope fixtures validate via `jsonschema`.
@@ -122,14 +124,12 @@ headless export support, aligning with ADR-007/ADR-016 gaps.
      `save_behavior` requests a headless export.
    - Add tests to verify byte outputs for PlotSpec rendering.
 
-**Open questions**
-- Should triangular/global PlotSpec payloads migrate from dict-style shims to
-  dedicated dataclasses in v0.10.1, or is it acceptable to keep dict payloads
-  with stricter validation?
-- Where should the PlotSpec schema version live (dataclass field vs. envelope
-  dict-only field) to minimize breakage for adapters and tests?
-- Do we need a separate JSON schema file for PlotSpec or is the existing
-  `viz/serializers.validate_plotspec` sufficient for v0.10.1?
+**Decisions**
+- Migrate triangular/global PlotSpec payloads to dedicated dataclasses in v0.10.1.
+- Store PlotSpec schema version as an explicit dataclass field (serialized in JSON).
+- Add a separate JSON schema file for PlotSpec in v0.10.1 to align with explanation
+  schema validation.
+- Make PlotSpec include optional provenance fields (data_slice_id, rendering_seed) for reproducible audits.
 
 **Verification checklist**
 - JSON round-trips for bar, triangular, and global PlotSpecs are stable.
@@ -178,13 +178,12 @@ CLI tooling, and docs.
    - Add a “Writing plot plugins” guide in `docs/plugins.md` or a new
      contributor doc with examples and migration notes.
 
-**Open questions**
-- Should plot plugin base classes live under `viz/` or `plugins/` to best match
-  the ownership boundaries from ADR-001?
-- Do we need to rename or version existing plot plugin IDs (`core.plot.legacy`,
-  `plot_spec.default`) to align with the new `default_renderer` metadata?
-- How should `PlotPluginError` be surfaced to users to avoid breaking existing
-  exception handling in `.plot()` workflows?
+**Decisions**
+- Place plot plugin base classes in `plugins/` with visualization adapters in `viz/`
+  to preserve a clear plugin boundary.
+- Keep existing plot plugin IDs stable and add versioning via metadata fields.
+- Surface `PlotPluginError` directly for invalid plugin usage to provide explicit,
+  auditable failures in `.plot()` workflows.
 
 **Verification checklist**
 - `.plot()` resolves legacy fallback when no plugin configured.
@@ -225,13 +224,14 @@ missing coverage for rendering semantics and guardrails.
    - Add explicit tests for one-sided interval warnings and for `show=False`
      behavior to prevent regressions.
 
-**Open questions**
-- Should `_plot_global` accept `path`/`title` parameters directly to match other
-  helpers, or should we add a wrapper in `plotting.py` that injects save behavior?
-- Do we need a compatibility flag to preserve existing `_plot_global` interactive
-  behavior for users who rely on `plt.show()` side effects?
-- Which specific plots should get golden-image coverage vs. semantic-only tests
-  to keep CI stable?
+**Decisions**
+- Update `_plot_global` to accept `path`/`title` parameters directly for consistent
+  save behavior with other helpers.
+- Do not add a compatibility flag for interactive-only `plt.show()` side effects;
+  default to headless-safe behavior when `show=False`.
+- Prefer semantic-only plotting tests for CI stability; avoid golden-image tests
+  unless absolutely necessary.
+- Make legacy plotting writes default to temp/working dir and add a config flag to enforce a required allowlisted base paths with validation to prevent leakage of regulated data. 
 
 **Verification checklist**
 - Legacy plotting matches ADR-024/ADR-025 behaviors.
@@ -256,11 +256,11 @@ used in plot plugin composition.
    - Run docstring linting (if available) or add tests ensuring
      dynamically generated classes have non-empty docstrings.
 
-**Open questions**
-- Should the combined plugin wrapper become a named class in `plugins/plots.py`
-  to avoid repeated nested class definitions and improve docstring linting?
-- Do we need to update ADR-018 tracking artifacts (e.g., baseline docstring
-  report) when we change the registry implementation?
+**Decisions**
+- Introduce a named combined plugin wrapper class in `plugins/plots.py` to improve
+  clarity and docstring linting.
+- Update ADR-018 tracking artifacts (baseline docstring report) when the registry
+  implementation changes.
 
 **Verification checklist**
 - Docstring linting passes for registry-generated classes.
@@ -292,13 +292,14 @@ without breaking existing APIs, and capture export telemetry.
      `10k rows < 200MB at chunk_size=256` and capture performance numbers.
    - Mark the feature experimental in `CHANGELOG.md` and update docs.
 
-**Open questions**
-- Should streaming use JSON Lines by default or chunked JSON arrays for better
-  downstream compatibility?
-- Where should export telemetry live (collection metadata vs. explainer telemetry)
-  to avoid mixing runtime explain telemetry with export-only metrics?
-- Is the `feature_branch` telemetry field intended to capture git metadata, or
-  should it reflect an explanation feature flag (e.g., streaming on/off)?
+**Decisions**
+- Support both JSON Lines and chunked JSON arrays for streaming; default to JSON
+  Lines while exposing an explicit format parameter.
+- Store minimal export telemetry in collection metadata and full telemetry in the
+  explainer telemetry record to keep artifacts self-describing without bloating
+  runtime stats.
+- Replace `feature_branch` with explicit telemetry fields (e.g., `build_id` and
+  `feature_flags`) for clarity and auditability.
 
 **Verification checklist**
 - Streaming exports yield valid JSON and preserve schema version.
@@ -334,19 +335,148 @@ any dead private helpers uncovered during the refactor.
    - Add a CI guard (lint/test step) to prevent new private-member usage in
      tests.
 
-**Open questions**
-- What thresholds or allowlist should the new CI guard use to avoid blocking
-  unrelated test work while remediation is in progress?
-- Are there Category A call sites that should remain temporarily due to missing
-  public API equivalents, and if so, what explicit waivers should be recorded?
-- Should the remediation effort include test helper renames (Category B) if they
-  are touched during Category A refactors?
+**Decisions**
+- Use a targeted allowlist with explicit expiry dates for the CI guard during
+  Category A remediation to prevent regressions without blocking unrelated work.
+- Permit temporary waivers only when tracked with an explicit expiry aligned to a
+  release gate.
+- Rename Category B test helpers only when required to complete Category A
+  refactors, avoiding scope creep.
 
 **Verification checklist**
 - Category A tests no longer call private members.
 - Coverage remains unchanged or improves.
 
 ---
+
+## 8) Open-source readiness workstream (v0.10.1 → v1.0.0-rc)
+
+**Goal:** Track and land repository health, documentation, quality, community,
+and licensing upgrades before the v1.0.0-rc freeze, starting in v0.10.1.
+
+### 8.1 Repository structure & metadata
+
+**Work items**
+1. Add top-level community health files:
+   - `CODE_OF_CONDUCT.md` (Contributor Covenant or equivalent).
+   - `SECURITY.md` with supported versions and vulnerability disclosure steps.
+   - `GOVERNANCE.md` or `MAINTAINERS.md` summarizing decision-making and
+     stewardship expectations.
+2. Link the new files from README and contributor docs for discoverability.
+
+**Open questions**
+- Should `GOVERNANCE.md` live at the repo root or under `.github/` for GitHub
+  discovery, with a short root-level pointer?
+- Do we want a dedicated `SUPPORT.md` or should support guidance remain in the
+  README and issue templates?
+
+**Decisions (minimal maintenance bias)**
+- Place `GOVERNANCE.md` at the repo root with a short pointer file under
+  `.github/` for GitHub discovery.
+- Add a lightweight `SUPPORT.md` (3–5 bullets), link it from README.
+
+**Verification checklist**
+- GitHub community health checks show Code of Conduct and Security policy.
+- README contains explicit links to the new files.
+
+### 8.2 Documentation
+
+**Work items**
+1. Expand API reference beyond the explainer classes:
+   - CLI entry points (`ce.plugins`) and usage.
+   - Plugin registry contracts and trusted plugin metadata.
+   - Serialization schema and envelope references.
+   - Visualization/PlotSpec interfaces.
+2. Add a README "Documentation map" linking:
+   - API reference.
+   - Architecture overview.
+   - Contributor guidance.
+   - Changelog and release notes.
+
+**Open questions**
+- Should CLI/plugin/serialization references live in a single API hub or remain
+  split across dedicated pages?
+- Is Sphinx autodoc sufficient for CLI and plugin registry docs, or should we
+  keep hand-authored reference pages for those sections?
+
+**Decisions (minimal maintenance bias)**
+- Use a hybrid doc layout: a short API hub/index page linking to concise detail
+  pages for CLI, plugins/registry, serialization, and viz.
+- Hand-author CLI and registry reference sections; rely on autodoc for classes
+  and other APIs to reduce drift.
+
+**Verification checklist**
+- API reference includes entries for CLI, plugins, serialization, and viz.
+- README links to the new documentation map.
+
+### 8.3 Quality & maintainability
+
+**Work items**
+1. Add dependency vulnerability scanning to CI:
+   - Implement `pip-audit` or CodeQL workflow.
+   - Ensure it runs on PRs and main.
+2. Introduce a reproducible dependency constraints/lock workflow:
+   - Decide on `pip-compile`, `uv` lockfiles, or a dedicated constraints file.
+   - Update developer docs and CI install steps to use the lock/constraints.
+
+**Open questions**
+- Do we standardize on `pip-compile` (requirements/constraints) or adopt `uv`
+  lockfiles for dev and CI?
+- Should security scanning fail the build or run in warning mode until v1.0.0?
+
+**Decisions (minimal maintenance bias)**
+- Standardize on a single `pip-compile`-generated constraints file for dev/CI.
+- Run dependency scanning as warn-on-PRs and fail-on-main after a short trial
+  period; adjust based on noise.
+
+**Verification checklist**
+- CI runs dependency scanning and reports pass/fail.
+- CI install steps reference the lock/constraints file.
+
+### 8.4 Community & contribution
+
+**Work items**
+1. Add `ROADMAP.md` summarizing the release plan for contributors.
+2. Link roadmap from README and CONTRIBUTING.
+3. Update issue/PR templates to reference governance/security guidance.
+
+**Open questions**
+- Should roadmap be a high-level summary with links to `RELEASE_PLAN_v1.md`, or
+  should we move the full plan into `ROADMAP.md` and keep the current file as
+  an internal implementation plan?
+
+**Decisions (minimal maintenance bias)**
+- Keep `ROADMAP.md` as a high-level summary that links to the detailed plan in
+  `RELEASE_PLAN_v1.md` and this implementation plan; avoid duplicating content.
+
+**Verification checklist**
+- Roadmap is present and linked from README and CONTRIBUTING.
+- Templates reference new governance/security docs.
+
+### 8.5 Licensing & governance
+
+**Work items**
+1. Add a contribution licensing statement:
+   - DCO sign-off flow or inbound=outbound clause in CONTRIBUTING.
+2. Clarify how contributions are licensed under BSD-3-Clause.
+
+**Open questions**
+- Are we adopting DCO (with `Signed-off-by`) or a simpler inbound=outbound
+  clause only?
+- Do we need a lightweight CLA for institutional contributors?
+
+**Decisions (minimal maintenance bias)**
+- Adopt DCO-only with `Signed-off-by` lines in commits/PRs; document the
+  copy-paste sign-off in templates.
+- Keep a lightweight institutional CLA template on hand but offer it only on
+  request; do not require CLA by default.
+
+**Verification checklist**
+- CONTRIBUTING explains contribution licensing expectations.
+- README or GOVERNANCE references the contribution licensing model.
+
+---
+
 
 ## Release gate alignment
 
